windows/fluidsynth/x64/include/fluidsynth/midi.h



/** @startlifecycle{MIDI File Player} */
FLUIDSYNTH_API fluid_player_t *new_fluid_player(fluid_synth_t *synth);

FLUIDSYNTH_API void delete_fluid_player(fluid_player_t *player);

/** @endlifecycle */

FLUIDSYNTH_API int fluid_player_add(fluid_player_t *player, const char *midifile);

FLUIDSYNTH_API int fluid_player_play(fluid_player_t *player);

FLUIDSYNTH_API int fluid_player_stop(fluid_player_t *player);

FLUIDSYNTH_API int fluid_player_join(fluid_player_t *player);

FLUIDSYNTH_API int fluid_player_set_loop(fluid_player_t *player, int loop);


FLUIDSYNTH_API int fluid_player_get_status(fluid_player_t *player);

FLUIDSYNTH_API int fluid_player_get_current_tick(fluid_player_t *player);

FLUIDSYNTH_API int fluid_player_get_total_ticks(fluid_player_t *player);

FLUIDSYNTH_API int fluid_player_get_bpm(fluid_player_t *player);

FLUIDSYNTH_API int fluid_player_get_division(fluid_player_t *player);

FLUIDSYNTH_API int fluid_player_get_midi_tempo(fluid_player_t *player);

FLUIDSYNTH_API int fluid_player_seek(fluid_player_t *player, int ticks);