windows/fluidsynth/x64/include/fluidsynth/settings.h



/** @startlifecycle{Settings} */
FLUIDSYNTH_API fluid_settings_t *new_fluid_settings(void);

FLUIDSYNTH_API void delete_fluid_settings(fluid_settings_t *settings);


FLUIDSYNTH_API
int fluid_settings_setstr(fluid_settings_t *settings, const char *name, const char *str);


FLUIDSYNTH_API
int fluid_settings_setnum(fluid_settings_t *settings, const char *name, double val);


FLUIDSYNTH_API
int fluid_settings_setint(fluid_settings_t *settings, const char *name, int val);